<resources>
    <string name="app_name">LegalDemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="default_string">default</string>

    <!--task_publish-->
    <string name="tp_title"> 标题</string>
    <string name="tp_type"> 类型：</string>
    <string name="tp_content"> 内容"</string>

    <!--nav-->
    <string name="nav_write_off">注销</string>
    <string name="nav_show_task">我的订单</string>

    <!--login-->
    <string name="lg_username">手机/邮箱/用户名</string>
    <string name="lg_password">密码</string>
    <string name="lg_login">登录</string>
    <string name="lg_register">免费注册</string>
    <string name="lg_forget">忘记密码</string>

    <!--register-->

    <string name="sex">性别:</string>
    <string name="isLawyer">是否律师:</string>
    <string name="yes">是</string>
    <string name="phone">电话号码</string>
    <string name="email">邮箱</string>
    <string name="no">否</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="submit">确认</string>
    <string name="first_name">姓</string>
    <string name="last_name">名</string>

    <!--XListView-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="hint_state">状态</string>

    <!--ListItem-->
    <string name="bn_expand">展开</string>
    <string name="bn_shrink">收缩</string>
    <string name="bn_cancel">取消订单</string>

    <!--dialog-->
    <string name="ok">确定</string>

</resources>
