<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/selectable_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_item_title"
                style="@style/ListItemTextLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:ellipsize="end"
                android:hint="@string/tp_title"
                android:maxEms="10"
                android:singleLine="true" />

            <TextView
                android:id="@+id/list_item_state"
                style="@style/ListItemTextRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:hint="@string/hint_state"
                android:textColor="@color/red"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:id="@+id/list_item_seperator"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@color/light_grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/list_item_type"
                style="@style/ListItemTextLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:hint="@string/tp_type"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/list_item_username"
                style="@style/ListItemTextRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:hint="@string/no"
                android:textSize="14sp" />
        </RelativeLayout>

        <View
            android:id="@+id/list_item_seperator1"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@color/light_grey" />

        <TextView
            android:id="@+id/list_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ellipsize="middle"
            android:hint="@string/tp_content"
            android:maxLines="3"
            android:minLines="2"
            android:textSize="16sp"
            android:singleLine="false"/>

        <View
            android:id="@+id/list_item_seperator2"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:background="@color/light_grey" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/list_item_card_more"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/bn_expand"
                android:textSize="12sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/list_item_card_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@string/bn_cancel"
                android:textSize="12sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>