<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".NormalUserUI.TaskPublishActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_task"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <EditText android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tp_title"
        android:textSize="16sp"
        android:background="@null"
        android:inputType="textMultiLine"
        android:padding="7dp" />

    <ImageView android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tp_type"
            android:textSize="16sp"
            android:padding="7dp"/>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingRight="0dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="0dp"
            android:enabled="false"
            android:textColor="@color/black"/>

    </LinearLayout>

    <ImageView android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <EditText android:padding="7dp"
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:textSize="16sp"
        android:hint="@string/tp_content"
        android:inputType="textMultiLine"
        android:background="@null"
        android:minLines="8">
    </EditText>

</LinearLayout>